--- a/_config.yml
+++ b/_config.yml
@@ -11,21 +11,21 @@ url:        	 http://necrobot2.com
 
 # Owner/author information
 owner:
-  name:           Necrobto2 Team
-  avatar:         Necrobto2.jpg
-  email:          Necrobto2Team@gmail.com
+  name:           Necrobot2 Team
+  avatar:         Necrobot2.jpg
+  email:          Necrobot2Team@gmail.com
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
   description:    Programming is 1% knowledge, 2% ability and 97% getting the ability to work with the knowledge :)
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        Necrobto2Team
-  facebook:       Necrobto2Team
-  github:         Necrobto2Team    
-  instagram:      Necrobto2Team
+  twitter:        Necrobot2Team
+  facebook:       Necrobot2Team
+  github:         Necrobot2Team    
+  instagram:      Necrobot2Team
   # For Google Authorship https://plus.google.com/authorship
-  google_plus:    https://plus.google.com/u/0/+Necrobto2Team
+  google_plus:    https://plus.google.com/u/0/+Necrobot2Team
 
 # Analytics and webmaster tools stuff goes here
-google_analytics:   UA-46791108-11
+google_analytics:   UA-46791108-110
 google_verify:      
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:         
