--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,8 @@ links:
     url: /
     external: false
     icon: home
+  - title: Snipe
+    url: http://snipe.necrobot2.com
   - title: Documents
     url: /documents
   - title: About
