--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            NecroBot2
 description:      "The opensource c# pokemon go bot"
-logo:             logo.png
+logo:             necrobot2.jpg
 disqus_shortname: necrobot2com
 share:            true
 dropcap:	   true
