add manual snipe config page

--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,9 @@ links:
     external: true
   - title: Documents
     url: /documents
+  - title: Downloads
+    url: https://github.com/Necrobot-Private/NecroBot/releases/latest
+    external: true
   - title: About
     url: /about
 
