--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ links:
   - title: Documents
     url: /documents
   - title: Downloads
-    url: http://necrobot2.com/documents/#Releases
+    url: /documents/#Releases
     external: false
   - title: About
     url: /about
